frontend/test/should_fail/repl_004.grg
using patt;

pattern Foo()
{	
	.;
	modify {
	}
}

rule r {
	modify {
		foo1:Foo();
		foo1();
	}
}